# Micro-Service-2

./: .gitattributes  Makefile  app.py  failures.py  pyproject.toml  r.txt  requirements.txt
tests/: test_app.py
