[tool.poetry]
name = "MS 2"
version = "0.1.0"
description = ""
authors = ["Hiro Hamada <laciferin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
pylint = "^2.6.0"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
